--- a/single-service.html
+++ b/single-service.html
@@ -330,6 +330,58 @@
 
 			</div>
 
+			<!-- Partners -->
+			<div class="partners text-center">
+				<div class="intro text-center">
+					<h3 class="mb-32">Our Partners</h3>
+				</div>
+
+				<div class="container slider">
+					<div class="row slide-track">
+						<div class="col-sm-3 slide">
+							<a href="#">
+								<img src="img/partners/1.png" height="100" width="200" alt="">
+							</a>
+						</div>
+						<div class="col-sm-3 slide">
+							<a href="#">
+								<img src="img/partners/2.png" height="100" width="200" alt="">
+							</a>
+						</div>
+						<div class="col-sm-3 slide">
+							<a href="#">
+								<img src="img/partners/3.png" height="100" width="200" alt="">
+							</a>
+						</div>
+						<div class="col-sm-3 slide">
+							<a href="#">
+								<img src="img/partners/4.png" height="100" width="200" alt="">
+							</a>
+						</div>
+						<div class="col-sm-3 slide">
+							<a href="#">
+								<img src="img/partners/1.png" height="100" width="200" alt="">
+							</a>
+						</div>
+						<div class="col-sm-3 slide">
+							<a href="#">
+								<img src="img/partners/2.png" height="100" width="200" alt="">
+							</a>
+						</div>
+						<div class="col-sm-3 slide">
+							<a href="#">
+								<img src="img/partners/3.png" height="100" width="200" alt="">
+							</a>
+						</div>
+						<div class="col-sm-3 slide">
+							<a href="#">
+								<img src="img/partners/4.png" height="100" width="200" alt="">
+							</a>
+						</div>
+
+					</div>
+				</div>
+			</div>
 
 			<!-- Footer -->
 			<footer class="footer bg-dark-overlay" style="background-image: url(img/footer/1.jpg);">
