--- a/about.html
+++ b/about.html
@@ -278,7 +278,7 @@
 						</div>
 					</div>
 				</div>
-			</div>
+			</div> 
 			<!-- end statistic -->
 
 			<!-- Team -->
@@ -398,26 +398,46 @@
 					<h3 class="mb-32">Our Partners in Transportation Business</h3>
 				</div>
 
-				<div class="container slider autoplay ">
-					<div class="row slider autoplay">
-						<div class="col-sm-3">
+				<div class="container slider">
+					<div class="row slide-track">
+						<div class="col-sm-3 slide">
 							<a href="#">
-								<img src="img/partners/1.png" alt="">
+								<img src="img/partners/1.png"  height="100" width="200" alt="">
 							</a>
 						</div>
-						<div class="col-sm-3">
+						<div class="col-sm-3 slide">
 							<a href="#">
-								<img src="img/partners/2.png" alt="">
+								<img src="img/partners/2.png" height="100" width="200" alt="">
 							</a>
 						</div>
-						<div class="col-sm-3">
+						<div class="col-sm-3 slide">
 							<a href="#">
-								<img src="img/partners/3.png" alt="">
+								<img src="img/partners/3.png" height="100" width="200" alt="">
 							</a>
 						</div>
-						<div class="col-sm-3">
+						<div class="col-sm-3 slide">
 							<a href="#">
-								<img src="img/partners/4.png" alt="">
+								<img src="img/partners/4.png" height="100" width="200" alt="">
+							</a>
+						</div>
+						<div class="col-sm-3 slide">
+							<a href="#">
+								<img src="img/partners/1.png"  height="100" width="200" alt="">
+							</a>
+						</div>
+						<div class="col-sm-3 slide">
+							<a href="#">
+								<img src="img/partners/2.png" height="100" width="200" alt="">
+							</a>
+						</div>
+						<div class="col-sm-3 slide">
+							<a href="#">
+								<img src="img/partners/3.png" height="100" width="200" alt="">
+							</a>
+						</div>
+						<div class="col-sm-3 slide">
+							<a href="#">
+								<img src="img/partners/4.png" height="100" width="200" alt="">
 							</a>
 						</div>
 
