--- a/single-service.html
+++ b/single-service.html
@@ -213,7 +213,7 @@
 
 
 			<!-- CTA -->
-			<div class="call-to-action text-center">
+			<div class="call-to-action text-center" style="background-image: url(img/services/Rider.jpg);">
 				<div class="call-to-action__container">
 					<h3 class="call-to-action__title">
 						We'll help you to build your future.
