--- a/single-service.html
+++ b/single-service.html
@@ -153,57 +153,27 @@
 						<div class="row">
 							<div class="col-lg-10">
 								<div class="entry__article">
-									<h3>Architectural Planning</h3>
-									<p>The architect usually begins to work when the site and the type and cost of a
-										building have been determined.
-										The site involves the varying behaviour of the natural environment that must be
-										adjusted to the unvarying physical needs of human beings; the type is the
-										generalized form established by society that must be adjusted to the special use
-										for which the building is required; the cost implies the economics of land,
-										labour, and materials that must be adjusted to suit a particular sum.force each
-										other: socio-cultural value, experiental value, building-technical value and
-										economical value.</p>
-									<div class="gallery gallery-size-large">
-										<figure class="gallery-item">
-											<div class="gallery-icon landscape">
-												<img src="img/services/single/1.jpg" class="attachment-large size-large"
-													alt="">
-											</div>
-										</figure>
-										<figure class="gallery-item">
-											<div class="gallery-icon landscape">
-												<img src="img/services/single/2.jpg" class="attachment-large size-large"
-													alt="">
-											</div>
-										</figure>
-									</div>
-									<p>Thus, planning is the process of particularizing and, ultimately, of harmonizing
-										the demands of environment, use, and economy.
-										This process has a cultural as well as a utilitarian value, for in creating a
-										plan for any social activity the architect
-										inevitably influences the way in which that activity is performed.</p>
+
 
 									<figure class="alignright">
-										<img src="img/services/single/3.jpg" alt="">
+										<img src="img/services/single/Insurance.jpg" alt="Insurance"
+											style="border-radius: 5%;">
 									</figure>
-									<h3>Planning the environment</h3>
-									<p>The methods of controlling the environment considered here are only the practical
-										aspects of planning. They are treated by
-										the architect within the context of the expressive aspects. The placement and
-										form of buildings in relation to their sites,
-										the distribution of spaces within buildings, and other planning devices
-										discussed below are fundamental elements in the aesthetics
-										of architecture.</p>
+									<div>
+										<h3>Ride with a peace of mind</h3>
+										<p style="font-size: 1.25rem;line-height: 1.5;">This is a joint initiative between foodpanda and insurtech Igloo to ensure
+											our riders are kept safe from harm whenever they are out for delivery. We
+											provide Third Party Liability and Personal Accident insurance coverage.</p>
+									</div>
 
-									<h3>Orientation</h3>
-									<p>The arrangement of the axes of buildings and their parts is a device for
-										controlling the effects of sun, wind, and rainfall.
-										The sun is regular in its course; it favours the southern and neglects the
-										northern exposures of buildings in the Northern
-										Hemisphere, so that it may be captured for heat or evaded for coolness by
-										turning the axis of a plan toward or away from
-										it.</p>
-
+									<figure class="alignleft">
+										<img src="img/services/single/Tools.jpg" alt="Tools" style="border-radius: 5%;">
+									</figure>
+									<div style="margin: 250px 0 0 0;">
+										<h3>Your everyday perks</h3>
+										<p style="font-size: 1.25rem;line-height: 1.5;">Enjoy over 45+ amazing perks ranging from F&B deals and petrol discounts to
+											affordable vehicle rentals and maintenance services.</p>
+									</div>
 								</div>
 							</div>
 						</div>
@@ -213,7 +183,7 @@
 
 
 			<!-- CTA -->
-			<div class="call-to-action text-center" style="background-image: url(img/services/Rider.jpg);">
+			<div class="call-to-action text-center">
 				<div class="call-to-action__container">
 					<h3 class="call-to-action__title">
 						We'll help you to build your future.
