--- a/about.html
+++ b/about.html
@@ -81,7 +81,7 @@
 									<ul class="nav__dropdown-menu">
 										<!-- <li><a href="./portfolio.html">Portfolio</a></li> -->
 										<li><a href="./scaffolding.html">Scaffolding</a></li>
-										<li><a href="./single-service.html">Single Service</a></li>
+										<li><a href="./delivery-service.html">Delivery Service</a></li>
 
 									</ul>
 								</li>
@@ -402,7 +402,7 @@
 					<div class="row slide-track">
 						<div class="col-sm-3 slide">
 							<a href="#">
-								<img src="img/partners/1.png"  height="100" width="200" alt="">
+								<img src="img/partners/1.png" height="100" width="200" alt="">
 							</a>
 						</div>
 						<div class="col-sm-3 slide">
@@ -422,7 +422,7 @@
 						</div>
 						<div class="col-sm-3 slide">
 							<a href="#">
-								<img src="img/partners/1.png"  height="100" width="200" alt="">
+								<img src="img/partners/1.png" height="100" width="200" alt="">
 							</a>
 						</div>
 						<div class="col-sm-3 slide">
