--- a/delivery-service.html
+++ b/delivery-service.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-	<title>Royenix | Single Service</title>
+	<title>Royenix | Delivery Service</title>
 
 	<meta charset="utf-8">
 	<!--[if IE]><meta http-equiv='X-UA-Compatible' content='IE=edge,chrome=1'><![endif]-->
@@ -16,6 +16,7 @@
 
 	<!-- Google Fonts -->
 	<link href='https://fonts.googleapis.com/css?family=Barlow:400,600%7COpen+Sans:400,400i,700' rel='stylesheet'>
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 	<!-- Css -->
 	<link rel="stylesheet" href="css/bootstrap.min.css" />
@@ -81,7 +82,7 @@
 									<ul class="nav__dropdown-menu">
 										<!-- <li><a href="./portfolio.html">Portfolio</a></li> -->
 										<li><a href="./scaffolding.html">Scaffolding</a></li>
-										<li><a href="./single-service.html">Single Service</a></li>
+										<li><a href="#">Delivery Service</a></li>
 
 									</ul>
 								</li>
@@ -137,56 +138,20 @@
 
 			<!-- Page Title -->
 			<section class="page-title bg-dark-overlay text-center"
-				style="background-image: url(img/page-title/about.jpg);">
+				style="background-image: url(img/services/Rider.jpg);">
 				<div class="container">
 					<div class="page-title__holder">
-						<h1 class="page-title__title">Single Service</h1>
+						<h1 class="page-title__title">Delivery Service</h1>
 						<p class="page-title__subtitle">For each project we establish relationships with partners</p>
 					</div>
 				</div>
 			</section> <!-- end page title -->
 
-			<!-- Service -->
-			<section class="section-wrap pb-0">
-				<div class="box-offset-container">
-					<div class="container">
-						<div class="row">
-							<div class="col-lg-10">
-								<div class="entry__article">
-
-
-									<figure class="alignright">
-										<img src="img/services/single/Insurance.jpg" alt="Insurance"
-											style="border-radius: 5%;">
-									</figure>
-									<div>
-										<h3>Ride with a peace of mind</h3>
-										<p style="font-size: 1.25rem;line-height: 1.5;">This is a joint initiative between foodpanda and insurtech Igloo to ensure
-											our riders are kept safe from harm whenever they are out for delivery. We
-											provide Third Party Liability and Personal Accident insurance coverage.</p>
-									</div>
-
-									<figure class="alignleft">
-										<img src="img/services/single/Tools.jpg" alt="Tools" style="border-radius: 5%;">
-									</figure>
-									<div style="margin: 250px 0 0 0;">
-										<h3>Your everyday perks</h3>
-										<p style="font-size: 1.25rem;line-height: 1.5;">Enjoy over 45+ amazing perks ranging from F&B deals and petrol discounts to
-											affordable vehicle rentals and maintenance services.</p>
-									</div>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-			</section> <!-- end service -->
-
-
 			<!-- CTA -->
 			<div class="call-to-action text-center">
 				<div class="call-to-action__container">
 					<h3 class="call-to-action__title">
-						We'll help you to build your future.
+						Join The Rider Nation!
 					</h3>
 					<a href="#" class="btn btn--lg btn--color" data-toggle="modal" data-target="#myModal">
 						<span>Let’s Work Together</span>
@@ -299,6 +264,77 @@
 				</div>
 
 			</div>
+			<!-- Service -->
+			<section class="section-wrap pb-0">
+				<div>
+					<div class="container">
+						<div class="row">
+							<div class="col-lg-10">
+								<div class="entry__article">
+
+
+									<figure class="alignright">
+										<img src="img/services/single/Insurance.jpg" alt="Insurance"
+											style="border-radius: 5%;">
+									</figure>
+									<div>
+										<h3>Ride with a peace of mind</h3>
+										<p style="font-size: 1.25rem;line-height: 1.5;">This is a joint initiative
+											between foodpanda and insurtech Igloo to ensure
+											our riders are kept safe from harm whenever they are out for delivery. We
+											provide Third Party Liability and Personal Accident insurance coverage.</p>
+									</div>
+
+									<figure class="alignleft">
+										<img src="img/services/single/Tools.jpg" alt="Tools" style="border-radius: 5%;">
+									</figure>
+									<div style="margin: 250px 0 0 0;">
+										<h3>Your everyday perks</h3>
+										<p style="font-size: 1.25rem;line-height: 1.5;">Enjoy over 45+ amazing perks
+											ranging from F&B deals and petrol discounts to
+											affordable vehicle rentals and maintenance services.</p>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</section> <!-- end service -->
+
+			<!-- Process -->
+			<section class="section-wrap bg-dark-overlay">
+				<div class="container">
+					<div class="row">
+						<div class="col-lg-4 col-md-6">
+							<div class="process">
+								<i class="fa fa-money process__icon" aria-hidden="true"></i>
+								<h4 class="process__title">Attractive Incentives</h4>
+								<p class="process__text">On top of our attractive Surge Fees, make additional earnings
+									with our New Joiner and Weekly Quest incentives. Any tips you receive goes straight
+									to your rider wallet. Refer a friend to us and be rewarded too!</p>
+							</div>
+						</div>
+						<div class="col-lg-4 col-md-6">
+							<div class="process">
+								<i class="fa fa-motorcycle process__icon" aria-hidden="true"></i>
+								<h4 class="process__title">No vehicle? No worries.</h4>
+								<p class="process__text">We offer free bicycle rentals with SG bikes and affordable
+									e-bike installment plans with Convertt.</p>
+							</div>
+						</div>
+						<div class="col-lg-4 col-md-6">
+							<div class="process">
+								<i class="fa fa-bed process__icon" aria-hidden="true"></i>
+								<h4 class="process__title">Accoodation</h4>
+								<p class="process__text">For each project we establish relationships with partners who
+									we know will help us.</p>
+							</div>
+						</div>
+					</div>
+				</div>
+			</section> <!-- end process -->
+
+			
 
 			<!-- Partners -->
 			<div class="partners text-center">
@@ -372,10 +408,9 @@
 							<div class="col-lg-2 col-md-3">
 								<div class="widget widget_nav_menu">
 									<ul>
-										<li><a href="#">About</a></li>
-										<li><a href="#">Services</a></li>
-										<li><a href="#">Blog</a></li>
-										<li><a href="#">Contact</a></li>
+										<li><a href="./index.html">Home</a></li>
+										<li><a href="./about.html">About</a></li>
+										<li><a href="./contact.html">Contact</a></li>
 									</ul>
 								</div>
 							</div>
@@ -383,9 +418,9 @@
 							<div class="col-lg-2 col-md-3">
 								<div class="widget widget_nav_menu">
 									<ul>
-										<li><a href="#">Privacy Policy</a></li>
-										<li><a href="#">Terms &amp; Conditions</a></li>
-										<li><a href="#">Career</a></li>
+										<!-- <li><a href="#">Services</a></li> -->
+										<li><a href="./scaffolding.html">Scaffolding</a></li>
+										<li><a href="./delivery-service.html">Delivery Service</a></li>
 									</ul>
 								</div>
 							</div>
