--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 									<ul class="nav__dropdown-menu">
 										<!-- <li><a href="./portfolio.html">Portfolio</a></li> -->
 										<li><a href="./scaffolding.html">Scaffolding</a></li>
-										<li><a href="./single-service.html">Single Service</a></li>
+										<li><a href="./delivery-service.html">Delivery Service</a></li>
 
 									</ul>
 								</li>
