--- a/portfolio.html
+++ b/portfolio.html
@@ -84,7 +84,7 @@
 									<ul class="nav__dropdown-menu">
 										<li><a href="about.html">About</a></li>
 										<li><a href="services.html">Services</a></li>
-										<li><a href="single-service.html">Single Service</a></li>
+										<li><a href="single-service.html">Delivery Service</a></li>
 										<li><a href="contact.html">Contact</a></li>
 									</ul>
 								</li>
@@ -129,7 +129,7 @@
 									<ul class="nav__dropdown-menu">
 										<!-- <li><a href="./portfolio.html">Portfolio</a></li> -->
 										<li><a href="./scaffolding.html">Scaffolding</a></li>
-										<li><a href="./single-service.html">Single Service</a></li>
+										<li><a href="./delivery-service.html">Delivery Service</a></li>
 
 									</ul>
 								</li>
