--- a/elements.html
+++ b/elements.html
@@ -86,7 +86,7 @@
 									<ul class="nav__dropdown-menu">
 										<li><a href="about.html">About</a></li>
 										<li><a href="services.html">Services</a></li>
-										<li><a href="single-service.html">Single Service</a></li>
+										<li><a href="single-service.html">Delivery Service</a></li>
 										<li><a href="contact.html">Contact</a></li>
 									</ul>
 								</li>
