--- a/delivery-service.html
+++ b/delivery-service.html
@@ -138,11 +138,11 @@
 
 			<!-- Page Title -->
 			<section class="page-title bg-dark-overlay text-center"
-				style="background-image: url(img/services/Rider.jpg);">
+				style="background-image: url(img/page-title/rider.jpg);">
 				<div class="container">
 					<div class="page-title__holder">
 						<h1 class="page-title__title">Delivery Service</h1>
-						<p class="page-title__subtitle">For each project we establish relationships with partners</p>
+						<!-- <p class="page-title__subtitle">For each project we establish relationships with partners</p> -->
 					</div>
 				</div>
 			</section> <!-- end page title -->
