--- a/delivery-service.html
+++ b/delivery-service.html
@@ -302,31 +302,31 @@
 			</section> <!-- end service -->
 
 			<!-- Process -->
-			<section class="section-wrap bg-dark-overlay">
+			<section class="section-wrap" style="background: #001D25; padding: 50px 0 !important; margin-top: 30px;">
 				<div class="container">
 					<div class="row">
 						<div class="col-lg-4 col-md-6">
 							<div class="process">
-								<i class="fa fa-money process__icon" aria-hidden="true"></i>
-								<h4 class="process__title">Attractive Incentives</h4>
-								<p class="process__text">On top of our attractive Surge Fees, make additional earnings
+								<i class="fa fa-money process__icon" aria-hidden="true" style="color: #23C0A3; font-size: 50px;"></i>
+								<h4 class="process__title__rider">Attractive Incentives</h4>
+								<p class="process__text__rider">On top of our attractive Surge Fees, make additional earnings
 									with our New Joiner and Weekly Quest incentives. Any tips you receive goes straight
 									to your rider wallet. Refer a friend to us and be rewarded too!</p>
 							</div>
 						</div>
 						<div class="col-lg-4 col-md-6">
 							<div class="process">
-								<i class="fa fa-motorcycle process__icon" aria-hidden="true"></i>
-								<h4 class="process__title">No vehicle? No worries.</h4>
-								<p class="process__text">We offer free bicycle rentals with SG bikes and affordable
+								<i class="fa fa-motorcycle process__icon" aria-hidden="true" style="color: #23C0A3; font-size: 50px;"></i>
+								<h4 class="process__title__rider">No vehicle? No worries.</h4>
+								<p class="process__text__rider">We offer free bicycle rentals with SG bikes and affordable
 									e-bike installment plans with Convertt.</p>
 							</div>
 						</div>
 						<div class="col-lg-4 col-md-6">
 							<div class="process">
-								<i class="fa fa-bed process__icon" aria-hidden="true"></i>
-								<h4 class="process__title">Accoodation</h4>
-								<p class="process__text">For each project we establish relationships with partners who
+								<i class="fa fa-bed process__icon" aria-hidden="true" style="color: #23C0A3; font-size: 50px;"></i>
+								<h4 class="process__title__rider">Accommodation</h4>
+								<p class="process__text__rider">For each project we establish relationships with partners who
 									we know will help us.</p>
 							</div>
 						</div>
