--- a/about.html
+++ b/about.html
@@ -174,22 +174,26 @@
 						<div class="col-xl-6 col-lg-6">
 							<div class="service-1">
 								<a href="#" class="service-1__url hover-scale">
-									<img src="img/services/v-2/1.jpg" class="service-1__img" alt="">
+									<img src="img/services/v-2/3.jpg" class="service-1__img" alt="">
 								</a>
 								<div class="service-1__info">
-									<h3 class="service-1__title">Service 1</h3>
+									<h3 class="service-1__title">Scaffolding</h3>
 									<ul class="service-1__features">
 										<li class="service-1__feature">
 											<i class="ui-check service-1__feature-icon"></i>
-											<span class="service-1__feature-text">Modern Design</span>
+											<span class="service-1__feature-text">TOP QUALITY</span>
 										</li>
 										<li class="service-1__feature">
 											<i class="ui-check service-1__feature-icon"></i>
-											<span class="service-1__feature-text">Unique Foundation</span>
+											<span class="service-1__feature-text">BRAND REPUTATION</span>
 										</li>
 										<li class="service-1__feature">
 											<i class="ui-check service-1__feature-icon"></i>
-											<span class="service-1__feature-text">Smart Headting System</span>
+											<span class="service-1__feature-text">DURABLE SCAFFOLD</span>
+										</li>
+										<li class="service-1__feature">
+											<i class="ui-check service-1__feature-icon"></i>
+											<span class="service-1__feature-text">HANDLE EVERY SCAFFOLDING</span>
 										</li>
 									</ul>
 								</div>
@@ -198,51 +202,28 @@
 						<div class="col-xl-6 col-lg-6">
 							<div class="service-1">
 								<a href="#" class="service-1__url hover-scale">
-									<img src="img/services/v-2/2.jpg" class="service-1__img" alt="">
+									<img src="img/services/single/Insurance.jpg" class="service-1__img" alt="">
 								</a>
 								<div class="service-1__info">
-									<h3 class="service-1__title">Service 2</h3>
+									<h3 class="service-1__title">Delivery Service</h3>
 									<ul class="service-1__features">
 										<li class="service-1__feature">
 											<i class="ui-check service-1__feature-icon"></i>
-											<span class="service-1__feature-text">Modern Design</span>
+											<span class="service-1__feature-text">Attractive Incentives</span>
 										</li>
 										<li class="service-1__feature">
 											<i class="ui-check service-1__feature-icon"></i>
-											<span class="service-1__feature-text">Unique Foundation</span>
+											<span class="service-1__feature-text">No vehicle? No worries.</span>
 										</li>
 										<li class="service-1__feature">
 											<i class="ui-check service-1__feature-icon"></i>
-											<span class="service-1__feature-text">Smart Headting System</span>
+											<span class="service-1__feature-text">Accommodation</span>
 										</li>
 									</ul>
 								</div>
 							</div>
 						</div>
-						<!-- <div class="col-xl-4 col-lg-6">
-							<div class="service-1">
-								<a href="#" class="service-1__url hover-scale">
-									<img src="img/services/v-2/3.jpg" class="service-1__img" alt="">
-								</a>
-								<div class="service-1__info">
-									<h3 class="service-1__title">Industrial premises</h3>
-									<ul class="service-1__features">
-										<li class="service-1__feature">
-											<i class="ui-check service-1__feature-icon"></i>
-											<span class="service-1__feature-text">Modern Design</span>
-										</li>
-										<li class="service-1__feature">
-											<i class="ui-check service-1__feature-icon"></i>
-											<span class="service-1__feature-text">Unique Foundation</span>
-										</li>
-										<li class="service-1__feature">
-											<i class="ui-check service-1__feature-icon"></i>
-											<span class="service-1__feature-text">Smart Headting System</span>
-										</li>
-									</ul>
-								</div>
-							</div>
-						</div> -->
+						
 					</div>
 				</div>
 			</section> <!-- end services -->
@@ -465,10 +446,9 @@
 							<div class="col-lg-2 col-md-3">
 								<div class="widget widget_nav_menu">
 									<ul>
+										<li><a href="./index.html">Home</a></li>
 										<li><a href="#">About</a></li>
-										<li><a href="#">Services</a></li>
-										<li><a href="#">Blog</a></li>
-										<li><a href="#">Contact</a></li>
+										<li><a href="./contact.html">Contact</a></li>
 									</ul>
 								</div>
 							</div>
@@ -476,9 +456,9 @@
 							<div class="col-lg-2 col-md-3">
 								<div class="widget widget_nav_menu">
 									<ul>
-										<li><a href="#">Privacy Policy</a></li>
-										<li><a href="#">Terms &amp; Conditions</a></li>
-										<li><a href="#">Career</a></li>
+										<!-- <li><a href="#">Services</a></li> -->
+										<li><a href="./scaffolding.html">Scaffolding</a></li>
+										<li><a href="./delivery-service.html">Delivery Service</a></li>
 									</ul>
 								</div>
 							</div>
@@ -486,14 +466,18 @@
 							<div class="col-lg-3 offset-lg-2 col-md-3">
 								<div class="widget">
 									<div class="socials">
-										<a href="#" class="social social-twitter" aria-label="twitter" title="twitter"
-											target="_blank"><i class="ui-twitter"></i></a>
-										<a href="#" class="social social-facebook" aria-label="facebook"
-											title="facebook" target="_blank"><i class="ui-facebook"></i></a>
-										<a href="#" class="social social-youtube" aria-label="youtube"
-											title="google plus" target="_blank"><i class="ui-youtube"></i></a>
-										<a href="#" class="social social-instagram" aria-label="instagram"
-											title="instagram" target="_blank"><i class="ui-instagram"></i></a>
+										<a href="https://www.twitter.com/royenix" class="social social-twitter"
+											aria-label="twitter" title="twitter" target="_blank"><i
+												class="ui-twitter"></i></a>
+										<a href="https://www.facebook.com/royenix" class="social social-facebook"
+											aria-label="facebook" title="facebook" target="_blank"><i
+												class="ui-facebook"></i></a>
+										<a href="https://www.youtube.com/royenix" class="social social-youtube"
+											aria-label="youtube" title="google plus" target="_blank"><i
+												class="ui-youtube"></i></a>
+										<a href="https://www.instagram.com/royenix" class="social social-instagram"
+											aria-label="instagram" title="instagram" target="_blank"><i
+												class="ui-instagram"></i></a>
 									</div>
 								</div>
 							</div>
@@ -505,7 +489,8 @@
 				<div class="footer__bottom">
 					<div class="container-fluid text-right text-md-center">
 						<span class="copyright">
-							© 2022 Royenix, Made by <a href="https://thedigibase.com">DigiBase</a>
+							© 2022 <a href="#">Royenix</a>. All Rights Reserved.
+							<!-- Made by <a href="https://thedigibase.com">DigiBase</a> -->
 						</span>
 					</div>
 				</div> <!-- end footer bottom -->
