--- a/contact.html
+++ b/contact.html
@@ -274,9 +274,8 @@
 							<div class="col-lg-2 col-md-3">
 								<div class="widget widget_nav_menu">
 									<ul>
-										<li><a href="#">About</a></li>
-										<li><a href="#">Services</a></li>
-										<li><a href="#">Blog</a></li>
+										<li><a href="./index.html">Home</a></li>
+										<li><a href="./about.html">About</a></li>
 										<li><a href="#">Contact</a></li>
 									</ul>
 								</div>
@@ -285,9 +284,9 @@
 							<div class="col-lg-2 col-md-3">
 								<div class="widget widget_nav_menu">
 									<ul>
-										<li><a href="#">Privacy Policy</a></li>
-										<li><a href="#">Terms &amp; Conditions</a></li>
-										<li><a href="#">Career</a></li>
+										<!-- <li><a href="#">Services</a></li> -->
+										<li><a href="./scaffolding.html">Scaffolding</a></li>
+										<li><a href="./delivery-service.html">Delivery Service</a></li>
 									</ul>
 								</div>
 							</div>
@@ -295,14 +294,18 @@
 							<div class="col-lg-3 offset-lg-2 col-md-3">
 								<div class="widget">
 									<div class="socials">
-										<a href="#" class="social social-twitter" aria-label="twitter" title="twitter"
-											target="_blank"><i class="ui-twitter"></i></a>
-										<a href="#" class="social social-facebook" aria-label="facebook"
-											title="facebook" target="_blank"><i class="ui-facebook"></i></a>
-										<a href="#" class="social social-youtube" aria-label="youtube"
-											title="google plus" target="_blank"><i class="ui-youtube"></i></a>
-										<a href="#" class="social social-instagram" aria-label="instagram"
-											title="instagram" target="_blank"><i class="ui-instagram"></i></a>
+										<a href="https://www.twitter.com/royenix" class="social social-twitter"
+											aria-label="twitter" title="twitter" target="_blank"><i
+												class="ui-twitter"></i></a>
+										<a href="https://www.facebook.com/royenix" class="social social-facebook"
+											aria-label="facebook" title="facebook" target="_blank"><i
+												class="ui-facebook"></i></a>
+										<a href="https://www.youtube.com/royenix" class="social social-youtube"
+											aria-label="youtube" title="google plus" target="_blank"><i
+												class="ui-youtube"></i></a>
+										<a href="https://www.instagram.com/royenix" class="social social-instagram"
+											aria-label="instagram" title="instagram" target="_blank"><i
+												class="ui-instagram"></i></a>
 									</div>
 								</div>
 							</div>
@@ -314,7 +317,8 @@
 				<div class="footer__bottom">
 					<div class="container-fluid text-right text-md-center">
 						<span class="copyright">
-							© 2022 Royenix, Made by <a href="https://thedigibase.com">DigiBase</a>
+							© 2022 <a href="#">Royenix</a>. All Rights Reserved.
+							<!-- Made by <a href="https://thedigibase.com">DigiBase</a> -->
 						</span>
 					</div>
 				</div> <!-- end footer bottom -->
