--- a/delivery-service.html
+++ b/delivery-service.html
@@ -279,10 +279,10 @@
 									</figure>
 									<div>
 										<h3>Ride with a peace of mind</h3>
-										<p style="font-size: 1.25rem;line-height: 1.5;">This is a joint initiative
-											between foodpanda and insurtech Igloo to ensure
-											our riders are kept safe from harm whenever they are out for delivery. We
-											provide Third Party Liability and Personal Accident insurance coverage.</p>
+										<p style="font-size: 1.25rem;line-height: 1.5;">Royenix's priority is our
+											employee's safety and we ensure our riders/drivers are kept safe from any
+											harm whenever they are out for delivery. We provide Workmen Compensation
+											Insurance for all our riders/drivers.</p>
 									</div>
 
 									<figure class="alignleft">
@@ -307,26 +307,32 @@
 					<div class="row">
 						<div class="col-lg-4 col-md-6">
 							<div class="process">
-								<i class="fa fa-money process__icon" aria-hidden="true" style="color: #23C0A3; font-size: 50px;"></i>
+								<i class="fa fa-money process__icon" aria-hidden="true"
+									style="color: #23C0A3; font-size: 50px;"></i>
 								<h4 class="process__title__rider">Attractive Incentives</h4>
-								<p class="process__text__rider">On top of our attractive Surge Fees, make additional earnings
+								<p class="process__text__rider">On top of our attractive Surge Fees, make additional
+									earnings
 									with our New Joiner and Weekly Quest incentives. Any tips you receive goes straight
 									to your rider wallet. Refer a friend to us and be rewarded too!</p>
 							</div>
 						</div>
 						<div class="col-lg-4 col-md-6">
 							<div class="process">
-								<i class="fa fa-motorcycle process__icon" aria-hidden="true" style="color: #23C0A3; font-size: 50px;"></i>
+								<i class="fa fa-motorcycle process__icon" aria-hidden="true"
+									style="color: #23C0A3; font-size: 50px;"></i>
 								<h4 class="process__title__rider">No vehicle? No worries.</h4>
-								<p class="process__text__rider">We offer free bicycle rentals with SG bikes and affordable
+								<p class="process__text__rider">We offer free bicycle rentals with SG bikes and
+									affordable
 									e-bike installment plans with Convertt.</p>
 							</div>
 						</div>
 						<div class="col-lg-4 col-md-6">
 							<div class="process">
-								<i class="fa fa-bed process__icon" aria-hidden="true" style="color: #23C0A3; font-size: 50px;"></i>
+								<i class="fa fa-bed process__icon" aria-hidden="true"
+									style="color: #23C0A3; font-size: 50px;"></i>
 								<h4 class="process__title__rider">Accommodation</h4>
-								<p class="process__text__rider">For each project we establish relationships with partners who
+								<p class="process__text__rider">For each project we establish relationships with
+									partners who
 									we know will help us.</p>
 							</div>
 						</div>
@@ -334,7 +340,7 @@
 				</div>
 			</section> <!-- end process -->
 
-			
+
 
 			<!-- Partners -->
 			<div class="partners text-center">
@@ -420,7 +426,7 @@
 									<ul>
 										<!-- <li><a href="#">Services</a></li> -->
 										<li><a href="./scaffolding.html">Scaffolding</a></li>
-										<li><a href="./delivery-service.html">Delivery Service</a></li>
+										<li><a href="#">Delivery Service</a></li>
 									</ul>
 								</div>
 							</div>
@@ -428,14 +434,18 @@
 							<div class="col-lg-3 offset-lg-2 col-md-3">
 								<div class="widget">
 									<div class="socials">
-										<a href="#" class="social social-twitter" aria-label="twitter" title="twitter"
-											target="_blank"><i class="ui-twitter"></i></a>
-										<a href="#" class="social social-facebook" aria-label="facebook"
-											title="facebook" target="_blank"><i class="ui-facebook"></i></a>
-										<a href="#" class="social social-youtube" aria-label="youtube"
-											title="google plus" target="_blank"><i class="ui-youtube"></i></a>
-										<a href="#" class="social social-instagram" aria-label="instagram"
-											title="instagram" target="_blank"><i class="ui-instagram"></i></a>
+										<a href="https://www.twitter.com/royenix" class="social social-twitter"
+											aria-label="twitter" title="twitter" target="_blank"><i
+												class="ui-twitter"></i></a>
+										<a href="https://www.facebook.com/royenix" class="social social-facebook"
+											aria-label="facebook" title="facebook" target="_blank"><i
+												class="ui-facebook"></i></a>
+										<a href="https://www.youtube.com/royenix" class="social social-youtube"
+											aria-label="youtube" title="google plus" target="_blank"><i
+												class="ui-youtube"></i></a>
+										<a href="https://www.instagram.com/royenix" class="social social-instagram"
+											aria-label="instagram" title="instagram" target="_blank"><i
+												class="ui-instagram"></i></a>
 									</div>
 								</div>
 							</div>
@@ -447,7 +457,8 @@
 				<div class="footer__bottom">
 					<div class="container-fluid text-right text-md-center">
 						<span class="copyright">
-							© 2022 Royenix, Made by <a href="https://thedigibase.com">DigiBase</a>
+							© 2022 <a href="#">Royenix</a>. All Rights Reserved.
+							<!-- Made by <a href="https://thedigibase.com">DigiBase</a> -->
 						</span>
 					</div>
 				</div> <!-- end footer bottom -->
