--- a/delivery-service.html
+++ b/delivery-service.html
@@ -321,9 +321,8 @@
 								<i class="fa fa-motorcycle process__icon" aria-hidden="true"
 									style="color: #23C0A3; font-size: 50px;"></i>
 								<h4 class="process__title__rider">No vehicle? No worries.</h4>
-								<p class="process__text__rider">We offer free bicycle rentals with SG bikes and
-									affordable
-									e-bike installment plans with Convertt.</p>
+								<p class="process__text__rider">We offer new bikes and other
+									accessories to all our new joiners.</p>
 							</div>
 						</div>
 						<div class="col-lg-4 col-md-6">
