--- a/delivery-service.html
+++ b/delivery-service.html
@@ -290,9 +290,8 @@
 									</figure>
 									<div style="margin: 250px 0 0 0;">
 										<h3>Your everyday perks</h3>
-										<p style="font-size: 1.25rem;line-height: 1.5;">Enjoy over 45+ amazing perks
-											ranging from F&B deals and petrol discounts to
-											affordable vehicle rentals and maintenance services.</p>
+										<p style="font-size: 1.25rem;line-height: 1.5;"> Achieve the given target on
+											time and enjoy amazing daily offers and super bonuses.</p>
 									</div>
 								</div>
 							</div>
