--- a/index.html
+++ b/index.html
@@ -451,9 +451,9 @@
 						<div class="project-1">
 							<div class="project-1__container">
 								<div class="project__img-holder hover-scale">
-									<a href="portfolio-single.html">
+									<!-- <a href="portfolio-single.html"> -->
 										<img src="img/portfolio/v-2/1.jpg" alt="" class="project__img">
-									</a>
+									<!-- </a> -->
 								</div>
 							</div>
 
