--- a/index.html
+++ b/index.html
@@ -144,8 +144,9 @@
 									target="_blank"><i class="ui-instagram"></i></a>
 							</div>
 
-							<span class="copyright">
-								© 2022 Royenix, Made by <a href="https://thedigibase.com">DigiBase</a>
+							<span class="copyright" style="color: #868686;">
+								© 2022 <a href="#">Royenix</a>. All Rights Reserved.
+							<!-- Made by <a href="https://thedigibase.com">DigiBase</a> -->
 							</span>
 						</div>
 
@@ -473,9 +474,9 @@
 						<div class="project-1">
 							<div class="project-1__container">
 								<div class="project__img-holder hover-scale">
-									<a href="portfolio-single.html">
+									<!-- <a href="portfolio-single.html"> -->
 										<img src="img/portfolio/v-2/2.jpg" alt="" class="project__img">
-									</a>
+									<!-- </a> -->
 								</div>
 							</div>
 
