--- a/scaffolding.html
+++ b/scaffolding.html
@@ -97,14 +97,18 @@
 
 							<div class="nav__socials nav__socials--mobile d-lg-none">
 								<div class="socials">
-									<a href="#" class="social social-twitter" aria-label="twitter" title="twitter"
-										target="_blank"><i class="ui-twitter"></i></a>
-									<a href="#" class="social social-facebook" aria-label="facebook" title="facebook"
-										target="_blank"><i class="ui-facebook"></i></a>
-									<a href="#" class="social social-youtube" aria-label="youtube" title="google plus"
-										target="_blank"><i class="ui-youtube"></i></a>
-									<a href="#" class="social social-instagram" aria-label="instagram" title="instagram"
-										target="_blank"><i class="ui-instagram"></i></a>
+									<a href="https://www.twitter.com/royenix" class="social social-twitter"
+										aria-label="twitter" title="twitter" target="_blank"><i
+											class="ui-twitter"></i></a>
+									<a href="https://www.facebook.com/royenix" class="social social-facebook"
+										aria-label="facebook" title="facebook" target="_blank"><i
+											class="ui-facebook"></i></a>
+									<a href="https://www.youtube.com/royenix" class="social social-youtube"
+										aria-label="youtube" title="google plus" target="_blank"><i
+											class="ui-youtube"></i></a>
+									<a href="https://www.instagram.com/royenix" class="social social-instagram"
+										aria-label="instagram" title="instagram" target="_blank"><i
+											class="ui-instagram"></i></a>
 								</div>
 							</div>
 						</nav> <!-- end nav-wrap -->
@@ -116,14 +120,17 @@
 
 						<div class="nav__socials d-none d-lg-block">
 							<div class="socials">
-								<a href="#" class="social social-twitter" aria-label="twitter" title="twitter"
-									target="_blank"><i class="ui-twitter"></i></a>
-								<a href="#" class="social social-facebook" aria-label="facebook" title="facebook"
-									target="_blank"><i class="ui-facebook"></i></a>
-								<a href="#" class="social social-youtube" aria-label="youtube" title="google plus"
-									target="_blank"><i class="ui-youtube"></i></a>
-								<a href="#" class="social social-instagram" aria-label="instagram" title="instagram"
-									target="_blank"><i class="ui-instagram"></i></a>
+								<a href="https://www.twitter.com/royenix" class="social social-twitter"
+									aria-label="twitter" title="twitter" target="_blank"><i class="ui-twitter"></i></a>
+								<a href="https://www.facebook.com/royenix" class="social social-facebook"
+									aria-label="facebook" title="facebook" target="_blank"><i
+										class="ui-facebook"></i></a>
+								<a href="https://www.youtube.com/royenix" class="social social-youtube"
+									aria-label="youtube" title="google plus" target="_blank"><i
+										class="ui-youtube"></i></a>
+								<a href="https://www.instagram.com/royenix" class="social social-instagram"
+									aria-label="instagram" title="instagram" target="_blank"><i
+										class="ui-instagram"></i></a>
 							</div>
 						</div>
 
