--- a/scaffolding.html
+++ b/scaffolding.html
@@ -91,8 +91,9 @@
 							</ul>
 							<!-- end menu -->
 							<div class="nav__phone nav__phone--mobile d-lg-none">
-								<span class="nav__phone-text">Call us:</span>
-								<a href="tel:+974-7710-3671" class="nav__phone-number">+974-7710-3671</a>
+								<!-- <span class="nav__phone-text">Call us:</span>
+								<a href="tel:+974-7710-3671" class="nav__phone-number">+974-7710-3671</a> -->
+								<div id="google_translate_element"></div>
 							</div>
 
 							<div class="nav__socials nav__socials--mobile d-lg-none">
@@ -114,8 +115,9 @@
 						</nav> <!-- end nav-wrap -->
 
 						<div class="nav__phone nav--align-right d-none d-lg-block">
-							<span class="nav__phone-text">Call us:</span>
-							<a href="tel:+974-7710-3671" class="nav__phone-number">+974-7710-3671</a>
+							<!-- <span class="nav__phone-text">Call us:</span>
+							<a href="tel:+974-7710-3671" class="nav__phone-number">+974-7710-3671</a> -->
+							<div id="google_translate_element"></div>
 						</div>
 
 						<div class="nav__socials d-none d-lg-block">
@@ -389,7 +391,7 @@
 		</div> <!-- end content wrapper -->
 	</main> <!-- end main wrapper -->
 
-
+	
 	<!-- jQuery Scripts -->
 	<script src="js/jquery.min.js"></script>
 	<script src="js/bootstrap.min.js"></script>
