--- a/about.html
+++ b/about.html
@@ -90,8 +90,9 @@
 								</li>
 							</ul> <!-- end menu -->
 							<div class="nav__phone nav__phone--mobile d-lg-none">
-								<span class="nav__phone-text">Call us:</span>
-								<a href="tel:+974-7710-3671" class="nav__phone-number">+974-7710-3671</a>
+								<!-- <span class="nav__phone-text">Call us:</span>
+								<a href="tel:+974-7710-3671" class="nav__phone-number">+974-7710-3671</a> -->
+								<div id="google_translate_element"></div>
 							</div>
 
 							<div class="nav__socials nav__socials--mobile d-lg-none">
@@ -113,8 +114,10 @@
 						</nav> <!-- end nav-wrap -->
 
 						<div class="nav__phone nav--align-right d-none d-lg-block">
-							<span class="nav__phone-text">Call us:</span>
-							<a href="tel:+974-7710-3671" class="nav__phone-number">+974-7710-3671</a>
+							<!-- <span class="nav__phone-text">Call us:</span>
+							<a href="tel:+974-7710-3671" class="nav__phone-number">+974-7710-3671</a> -->
+							<div id="google_translate_element"></div>
+
 						</div>
 
 						<div class="nav__socials d-none d-lg-block">
@@ -511,6 +514,13 @@
 	</main> <!-- end main wrapper -->
 
 
+	<script type="text/javascript">
+		function googleTranslateElementInit() {
+			new google.translate.TranslateElement({ pageLanguage: 'en' }, 'google_translate_element');
+		}
+	</script>
+	<script type="text/javascript"
+		src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
 	<!-- jQuery Scripts -->
 	<script src="js/jquery.min.js"></script>
 	<script src="js/bootstrap.min.js"></script>
