--- a/contact.html
+++ b/contact.html
@@ -95,8 +95,9 @@
 
 							<!-- end menu -->
 							<div class="nav__phone nav__phone--mobile d-lg-none">
-								<span class="nav__phone-text">Call us:</span>
-								<a href="tel:+974-7710-3671" class="nav__phone-number">+974-7710-3671</a>
+								<!-- <span class="nav__phone-text">Call us:</span>
+								<a href="tel:+974-7710-3671" class="nav__phone-number">+974-7710-3671</a> -->
+								<div id="google_translate_element"></div>
 							</div>
 
 							<div class="nav__socials nav__socials--mobile d-lg-none">
@@ -118,8 +119,10 @@
 						</nav> <!-- end nav-wrap -->
 
 						<div class="nav__phone nav--align-right d-none d-lg-block">
-							<span class="nav__phone-text">Call us:</span>
-							<a href="tel:+974-7710-3671" class="nav__phone-number">+974-7710-3671</a>
+							<!-- <span class="nav__phone-text">Call us:</span>
+							<a href="tel:+974-7710-3671" class="nav__phone-number">+974-7710-3671</a> -->
+							<div id="google_translate_element"></div>
+
 						</div>
 
 						<div class="nav__socials d-none d-lg-block">
@@ -342,15 +345,18 @@
 		</div> <!-- end content wrapper -->
 	</main> <!-- end main wrapper -->
 
-
+	<script type="text/javascript">
+		function googleTranslateElementInit() {
+			new google.translate.TranslateElement({ pageLanguage: 'en' }, 'google_translate_element');
+		}
+	</script>
+	<script type="text/javascript"
+		src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
 	<!-- jQuery Scripts -->
 	<script src="js/jquery.min.js"></script>
 	<script src="js/bootstrap.min.js"></script>
 	<script src="js/plugins.js"></script>
-	<!-- 
-		1. Generate your key here - https://developers.google.com/maps/documentation/javascript/get-api-key
-		2. Paste your key in the script below.
-	-->
+	
 	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCoQ3_zzRfW-hYspkwr5kvwCwLPGZsN4nw"></script>
 	<script src="js/gmap3.min.js"></script>
 	<script src="js/google-map.js"></script>
