--- a/about.html
+++ b/about.html
@@ -89,10 +89,21 @@
 									<a href="./contact.html" aria-haspopup="true">Contact Us</a>
 								</li>
 							</ul> <!-- end menu -->
+							<!-- Mobile -->
 							<div class="nav__phone nav__phone--mobile d-lg-none">
-								<!-- <span class="nav__phone-text">Call us:</span>
-								<a href="tel:+974-7710-3671" class="nav__phone-number">+974-7710-3671</a> -->
 								<div id="google_translate_element"></div>
+							</div>
+
+							<!-- Mobile Phone -->
+							<div class="nav__phone nav__phone--mobile d-lg-none">
+								<span class="nav__phone-text">Call us:</span>
+								<a href="tel:+974-7710-3671" class="nav__phone-number">+974-7710-3671</a>
+							</div>
+
+							<!-- Mobile Email -->
+							<div class="nav__email nav__email--mobile d-lg-none">
+								<span class="nav__email-text">Email us:</span>
+								<a href="mailto:info@royenix.com" class="nav__email-email">info@royenix.com</a>
 							</div>
 
 							<div class="nav__socials nav__socials--mobile d-lg-none">
@@ -114,10 +125,8 @@
 						</nav> <!-- end nav-wrap -->
 
 						<div class="nav__phone nav--align-right d-none d-lg-block">
-							<!-- <span class="nav__phone-text">Call us:</span>
-							<a href="tel:+974-7710-3671" class="nav__phone-number">+974-7710-3671</a> -->
-							<div id="google_translate_element"></div>
-
+							<span class="nav__phone-text">Call us:</span>
+							<a href="tel:+974-7710-3671" class="nav__phone-number">+974-7710-3671</a>
 						</div>
 
 						<div class="nav__socials d-none d-lg-block">
