--- a/contact.html
+++ b/contact.html
@@ -94,12 +94,25 @@
 							</ul>
 
 							<!-- end menu -->
+
+							<!-- Mobile -->
 							<div class="nav__phone nav__phone--mobile d-lg-none">
-								<!-- <span class="nav__phone-text">Call us:</span>
-								<a href="tel:+974-7710-3671" class="nav__phone-number">+974-7710-3671</a> -->
 								<div id="google_translate_element"></div>
 							</div>
 
+							<!-- Mobile Phone -->
+							<div class="nav__phone nav__phone--mobile d-lg-none">
+								<span class="nav__phone-text">Call us:</span>
+								<a href="tel:+974-7710-3671" class="nav__phone-number">+974-7710-3671</a>
+							</div>
+
+							<!-- Mobile Email -->
+							<div class="nav__email nav__email--mobile d-lg-none">
+								<span class="nav__email-text">Email us:</span>
+								<a href="mailto:info@royenix.com" class="nav__email-email">info@royenix.com</a>
+							</div>
+
+							<!-- Mobile Socials -->
 							<div class="nav__socials nav__socials--mobile d-lg-none">
 								<div class="socials">
 									<a href="https://www.twitter.com/royenix" class="social social-twitter"
@@ -119,10 +132,8 @@
 						</nav> <!-- end nav-wrap -->
 
 						<div class="nav__phone nav--align-right d-none d-lg-block">
-							<!-- <span class="nav__phone-text">Call us:</span>
-							<a href="tel:+974-7710-3671" class="nav__phone-number">+974-7710-3671</a> -->
-							<div id="google_translate_element"></div>
-
+							<span class="nav__phone-text">Call us:</span>
+							<a href="tel:+974-7710-3671" class="nav__phone-number">+974-7710-3671</a>
 						</div>
 
 						<div class="nav__socials d-none d-lg-block">
@@ -356,7 +367,7 @@
 	<script src="js/jquery.min.js"></script>
 	<script src="js/bootstrap.min.js"></script>
 	<script src="js/plugins.js"></script>
-	
+
 	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCoQ3_zzRfW-hYspkwr5kvwCwLPGZsN4nw"></script>
 	<script src="js/gmap3.min.js"></script>
 	<script src="js/google-map.js"></script>
