--- a/about.html
+++ b/about.html
@@ -125,8 +125,7 @@
 						</nav> <!-- end nav-wrap -->
 
 						<div class="nav__phone nav--align-right d-none d-lg-block">
-							<span class="nav__phone-text">Call us:</span>
-							<a href="tel:+974-7710-3671" class="nav__phone-number">+974-7710-3671</a>
+							<div id="google_translate_element"></div>
 						</div>
 
 						<div class="nav__socials d-none d-lg-block">
@@ -163,7 +162,8 @@
 						<p class="page-title__subtitle">For each project we establish relationships with partners</p>
 					</div>
 				</div>
-			</section> <!-- end page title -->
+			</section>
+			<!-- end page title -->
 
 			<!-- Intro -->
 			<section class="section-wrap">
@@ -183,8 +183,8 @@
 						</div>
 					</div>
 				</div>
-			</section> <!-- end intro -->
-
+			</section>
+			<!-- end intro -->
 
 			<!-- Services -->
 			<section class="section-wrap pt-0 pb-0">
@@ -245,8 +245,8 @@
 
 					</div>
 				</div>
-			</section> <!-- end services -->
-
+			</section>
+			<!-- end services -->
 
 			<!-- Statistic -->
 			<div class="container">
@@ -280,7 +280,7 @@
 				</div>
 			</div>
 			<!-- end statistic -->
-
+			<br>
 			<!-- Partners -->
 			<div class="partners bg-light text-center">
 				<div class="intro text-center">
@@ -333,7 +333,7 @@
 					</div>
 				</div>
 			</div>
-
+			<!-- end Partners -->
 
 			<!-- Footer -->
 			<footer class="footer bg-dark-overlay" style="background-image: url(img/footer/1.jpg);">
@@ -419,7 +419,15 @@
 	</script>
 	<script type="text/javascript"
 		src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
-	<!-- jQuery Scripts -->
+		<script type="text/javascript">
+			function googleTranslateElementInit() {
+				new google.translate.TranslateElement({ pageLanguage: 'en' }, 'google_translate_element');
+			}
+		</script>
+		<script type="text/javascript"
+		src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+		
+		<!-- jQuery Scripts -->
 	<script src="js/jquery.min.js"></script>
 	<script src="js/bootstrap.min.js"></script>
 	<script src="js/plugins.js"></script>
