--- a/delivery-service.html
+++ b/delivery-service.html
@@ -90,10 +90,11 @@
 									<a href="./contact.html" aria-haspopup="true">Contact Us</a>
 								</li>
 							</ul> <!-- end menu -->
+							
 							<!-- Mobile -->
-							<div class="nav__phone nav__phone--mobile d-lg-none">
+							<!-- <div class="nav__phone nav__phone--mobile d-lg-none">
 								<div id="google_translate_element"></div>
-							</div>
+							</div> -->
 
 							<!-- Mobile Phone -->
 							<div class="nav__phone nav__phone--mobile d-lg-none">
@@ -126,8 +127,7 @@
 						</nav> <!-- end nav-wrap -->
 
 						<div class="nav__phone nav--align-right d-none d-lg-block">
-							<span class="nav__phone-text">Call us:</span>
-							<a href="tel:+974-7710-3671" class="nav__phone-number">+974-7710-3671</a>
+							<div id="google_translate_element"></div>
 						</div>
 
 						<div class="nav__socials d-none d-lg-block">
