--- a/scaffolding.html
+++ b/scaffolding.html
@@ -90,9 +90,9 @@
 								</li>
 							</ul>
 							<!-- end menu -->
-							<div class="nav__phone nav__phone--mobile d-lg-none">
+							<!-- <div class="nav__phone nav__phone--mobile d-lg-none">
 								<div id="google_translate_element"></div>
-							</div>
+							</div> -->
 
 							<!-- Mobile Phone -->
 							<div class="nav__phone nav__phone--mobile d-lg-none">
@@ -125,9 +125,7 @@
 						</nav> <!-- end nav-wrap -->
 
 						<div class="nav__phone nav--align-right d-none d-lg-block">
-							<span class="nav__phone-text">Call us:</span>
-							<a href="tel:+974-7710-3671" class="nav__phone-number">+974-7710-3671</a>
-							<!-- <div id="google_translate_element"></div> -->
+							<div id="google_translate_element"></div>
 						</div>
 
 						<div class="nav__socials d-none d-lg-block">
