--- a/about.html
+++ b/about.html
@@ -89,10 +89,11 @@
 									<a href="./contact.html" aria-haspopup="true">Contact Us</a>
 								</li>
 							</ul> <!-- end menu -->
+							
 							<!-- Mobile -->
-							<div class="nav__phone nav__phone--mobile d-lg-none">
+							<!-- <div class="nav__phone nav__phone--mobile d-lg-none">
 								<div id="google_translate_element"></div>
-							</div>
+							</div> -->
 
 							<!-- Mobile Phone -->
 							<div class="nav__phone nav__phone--mobile d-lg-none">
